0032631: Draw Harness - add DRAWEXE.evalAsync() to WebAssembly